objects/Summary_of_Sales_by_Years__x.object
<CustomObject>
    <description>Summary_of_Sales_by_Years</description>
    <externalDataSource>Odata_Sample</externalDataSource>
    <externalName>Summary_of_Sales_by_Years</externalName>
    <fields>
        <fullName>OrderID__c</fullName>
        <description>OrderID</description>
        <externalDeveloperName>OrderID</externalDeveloperName>
        <label>OrderID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippedDate__c</fullName>
        <description>ShippedDate</description>
        <externalDeveloperName>ShippedDate</externalDeveloperName>
        <label>ShippedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <description>Subtotal</description>
        <externalDeveloperName>Subtotal</externalDeveloperName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Summary_of_Sales_by_Years</label>
    <pluralLabel>Summary_of_Sales_by_Years</pluralLabel>
</CustomObject>